--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -14,5 +14,5 @@ api_platform:
         extra_properties:
             standard_put: true
             rfc_7807_compliant_errors: true
-    keep_legacy_inflector: false
+    # keep_legacy_inflector: false
     use_symfony_listeners: true
